@@ -123,7 +123,7 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @set doc-edition 4.8.2-alpha06
 @set copyright-years 1995--2019
 @set update-year 2019
-@set update-date 1 September 2019
+@set update-date 6 September 2019
 @set update-month September 2019
 
 @settitle @acronym{NCO} @value{nco-edition} User Guide
@@ -9608,29 +9608,33 @@ As of @acronym{NCO} version 4.1.0 (April, 2012), @acronym{NCO}
 supports data integrity verification using the @acronym{MD5} digest
 algorithm. 
 This support is currently implemented in @command{ncks} and in the
-multifile concantenators @command{ncecat} and @command{ncrcat}.
+multi-file concatenators @command{ncecat} and @command{ncrcat}.
 Activate it with the @samp{--md5_dgs} or @samp{--md5_digest} long
 options. 
 As of @acronym{NCO} version 4.3.3 (July, 2013), @acronym{NCO} 
 will write the @acronym{MD5} digest of each variable as an
 @code{NC_CHAR} attribute named @code{MD5}.
 This support is currently implemented in @command{ncks} and in the
-multifile concantenators @command{ncecat} and @command{ncrcat}.
+multi-file concatenators @command{ncecat} and @command{ncrcat}.
 Activate it with the @samp{--md5_wrt_att} or
 @samp{--md5_write_attribute} long options.
 
 The behavior and verbosity of the @acronym{MD5} digest is
 operator-dependent.
-When activating @acronym{MD5} digests with @command{ncks} it is assumed
-that the user simply wishes to see the digest of every variable and this
-is done when the debugging level exceeds one.
-This incurs only the minor overhead of performing the hash algorithm for
-each variable read.
 @acronym{MD5} digests may be activated in both @command{ncks} invocation
-type, the one-filename argument form for printing and the two-filename
-argument form for sub-setting.
-The @acronym{MD5} digests are shown as a 32-character hexadecimal string 
-in which each two characters represent one byte of the 16-byte digest:
+types, the one-filename argument mode for printing sub-setted and
+hyperslabbed data, and the two-filename argument mode for copying that
+data to a new file. 
+Both modes will incur minor overhead from performing the hash
+algorithm for each variable read, and each variable written will
+have an additional attribute named @code{MD5}.
+When activating @acronym{MD5} digests with @command{ncks} it is assumed
+that the user wishes to print the digest of every variable when the
+debugging level exceeds one. 
+
+@command{ncks} displays an @acronym{MD5} digest as a 32-character
+hexadecimal string in which each two characters represent one byte of 
+the 16-byte digest: 
 @example
 > ncks --trd -D 2 -C --md5 -v md5_a,md5_abc ~/nco/data/in.nc
 ...
@@ -9679,7 +9683,7 @@ Regardless of the debugging level, an error is returned when the digests
 of the variable read from the source file and from the output file
 disagree.  
 
-These rules are evolving and as @acronym{NCO} pays more attention to
+These rules may further evolve as @acronym{NCO} pays more attention to 
 data integrity. 
 We welcome feedback and suggestions from users.
 
