@@ -1,3 +1,7 @@
+2019-09-06  Charlie Zender  <zender@uci.edu>
+
+	* Expose linear/logarithmic vertical interpolation option to user control with --ntp_mth=lin|log
+
 2019-09-02  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.8.2-alpha06 release procedure:
